--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,23 +23,28 @@
     "autoprefixer": "^10.4.20",
     "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
+    "embla-carousel-svelte": "^8.4.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
+    "formsnap": "^1.0.1",
     "globals": "^15.0.0",
-    "lucide-svelte": "^0.459.0",
+    "lucide-svelte": "^0.460.1",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-sonner": "^0.3.28",
+    "sveltekit-superforms": "^2.20.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3",
-    "vitest": "^2.0.4"
+    "vitest": "^2.0.4",
+    "zod": "^3.23.8"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
