--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "axios": "^1.7.7",
     "mode-watcher": "^0.4.1"
   }
 }
