--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
-    "mode-watcher": "^0.4.1"
+    "mode-watcher": "^0.4.1",
+    "svelte-persisted-store": "^0.12.0"
   }
 }
